<resources>
    <string name="app_name">CareConnectPatient</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="patient_default">Patient</string>
    <string name="email_default">patient@patient.com</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must contain a number</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!--<string name="error_confirm_password">Passwords don&apos;t match</string>-->
    <string name="error_confirm_password">Passwords dont match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to register-->
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="error_connection_issue">Something went wrong. Please try again later!</string>

    <string name="back">Back</string>
    <string name="rehab">Rehab</string>
    <string name="spinner">Select Gender</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>


    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>

    <!--Timer strings-->
    <string name="enter_minutes">Minutes!</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="timer">00:00:00</string>
</resources>
