<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.careconnectpatient.LoginActivity"
    android:background="#3D6954"
    android:weightSum="1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_weight="0.32"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textColor="#ffffff" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textColor="#ffffff" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/login_back"
            android:layout_gravity="left"
            android:onClick="LoginBack"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:id="@+id/email_sign_in_button"
            android:layout_gravity="right"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp" />

    </RelativeLayout>

</LinearLayout>
