<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.careconnectpatient.RegisterActivity"
    android:background="#3d6954">

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/register_back"
            android:onClick="RegisterBack"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register_button"
            android:layout_alignTop="@+id/register_back"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp" />


    </RelativeLayout>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/register_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/editText2"
                android:layout_alignEnd="@+id/editText2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Surname"
                android:ems="10"
                android:id="@+id/register_surname"
                android:layout_below="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender_spinner"
                android:drawSelectorOnTop="true"
                android:prompt="@string/spinner"
                android:entries="@array/genderItems"
                android:layout_below="@+id/register_surname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:ems="10"
                android:id="@+id/register_email"
                android:layout_below="@+id/gender_spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:ems="10"
                android:id="@+id/register_password"
                android:layout_below="@+id/register_email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/register_email"
                android:layout_alignEnd="@+id/register_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:hint="Phone number"
                android:id="@+id/register_phone_number"
                android:layout_below="@+id/register_password"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/register_password"
                android:layout_alignEnd="@+id/register_password" />

        </LinearLayout>




    </ScrollView>

</RelativeLayout>
